# OpenSource_Logs

./: .gitignore  README.md
BIP/: README.md  impl_breakdown.md  impl_concept.md  output.txt  script.py
BIP/.BIP/: pyvenv.cfg
BIP/bitcoinjs-lib/src/: block.js  psbt.js  script.js  transaction.js
BIP/docs/: p2pk.md  p2pkh.md  p2wsh.md
BIP/src/: blocks.py  coinbase.py  coinbase_data.py  coinbase_txn.py  coinbase_txn_my.py  list_valid_txn.py  message(1).py  message.py  tempCodeRunnerFile.py  validate_txn.py
BIP/src/helper/: converter.py  get_txn_id.py  merkle_root.py  txn_info.py
BIP/src/scripts/: p2pkh.py  p2sh.py  p2wpkh.py
Bustle/: CONCEPT.md  GUI_Rust.md  README.md
Bustle/GUI_Rust/: 1.GUI_Rust.md  2.Settings.md  3.SavingWindow.md  4.ListWidgets.md  5.CompositeTemplates.md  Libadwaita.md
Bustle/Hustle/: README.md  pseudoterminal.md  pty.md
Bustle/ToDo/: Cargo.toml  README.md
Bustle/ToDo/1/: main.rs
Bustle/ToDo/1/window/: mod.rs
Bustle/bustle/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  bustle.doap  meson.build  meson_options.txt
Bustle/bustle/build-aux/: org.freedesktop.Bustle.Devel.json
Bustle/bustle/data/: org.freedesktop.Bustle.desktop.in.in  org.freedesktop.Bustle.gschema.xml.in  org.freedesktop.Bustle.metainfo.xml.in.in
Bustle/bustle/data/resources/: resources.gresource.xml  style.css
Bustle/bustle/data/resources/ui/: address_dialog.ui  details_view.ui  diagram.ui  diagram_header.ui  diagram_row.ui  diagram_row_tag.ui  diagram_view.ui  durations_page.ui  filter_pane.ui  filter_pane_bus_name_row.ui  filter_pane_message_tag_row.ui  frequencies_page.ui  page.ui  shortcuts.ui  sizes_page.ui  statistics.ui  window.ui  window_org.ui
Bustle/bustle/po/: POTFILES.in  fr.po  he.po  meson.build  pt_BR.po
Bustle/bustle/src/: address_dialog.rs  application.rs  bus_name_item.rs  bus_name_list.rs  color_widget.rs  details_view.rs  filtered_bus_name_model.rs  filtered_message_model.rs  i18n.rs  main.rs  meson.build  message.rs  message_list.rs  message_tag.rs  message_type.rs  monitor.rs  page.rs  timestamp.rs  window.rs
Bustle/bustle/src/diagram/: header.rs  mod.rs  row.rs  row_tag.rs  view.rs
Bustle/bustle/src/filter_pane/: bus_name_row.rs  message_tag_row.rs  mod.rs
Bustle/bustle/src/statistics/: duration_item.rs  frequency_item.rs  mod.rs  size_item.rs  window.rs
Bustle/bustle/src/statistics/pages/: durations.rs  frequencies.rs  mod.rs  progress_cell.rs  sizes.rs
Tester_Projects/: README.md
Tester_Projects/Hello_World/: Cargo.toml
ToDo/1/: main.rs
bip_childs/answer_folder/code-challenge-2024-mempool/: splitter.py
verkle_root/Rust_Wrapper_Needed/: README.md
(+6 files in other folders)
