[package]
name = "ToDo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = ">= 0.3.1", package = "libadwaita", features = ["v1_4"] }
anyhow = "1.0"
ashpd = { version = "0.8.0", features = ["gtk4"] }
async-channel = "2.0"
dirs = "5.0"
gtk = { version = "*", package = "gtk4", features = ["v4_12"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
walkdir = "2.3"
xshell = "0.2"

# actions
[[bin]]
name = "actions_1"
path = "actions/1/main.rs"

[[bin]]
name = "actions_2"
path = "actions/2/main.rs"

[[bin]]
name = "actions_3"
path = "actions/3/main.rs"

[[bin]]
name = "actions_4"
path = "actions/4/main.rs"

[[bin]]
name = "actions_5"
path = "actions/5/main.rs"

[[bin]]
name = "actions_6"
path = "actions/6/main.rs"

[[bin]]
name = "actions_7"
path = "actions/7/main.rs"

# css
[[bin]]
name = "css_1"
path = "css/1/main.rs"

[[bin]]
name = "css_2"
path = "css/2/main.rs"

[[bin]]
name = "css_3"
path = "css/3/main.rs"

[[bin]]
name = "css_4"
path = "css/4/main.rs"

[[bin]]
name = "css_5"
path = "css/5/main.rs"

[[bin]]
name = "css_6"
path = "css/6/main.rs"

[[bin]]
name = "css_7"
path = "css/7/main.rs"

[[bin]]
name = "css_8"
path = "css/8/main.rs"

[[bin]]
name = "css_9"
path = "css/9/main.rs"

# todo
[[bin]]
name = "todo_1"
path = "1/main.rs"

[[bin]]
name = "todo_2"
path = "2/main.rs"

[[bin]]
name = "todo_3"
path = "3/main.rs"

[[bin]]
name = "todo_4"
path = "4/main.rs"

[[bin]]
name = "todo_5"
path = "5/main.rs"

[[bin]]
name = "todo_6"
path = "6/main.rs"

[[bin]]
name = "todo_7"
path = "7/main.rs"

[[bin]]
name = "todo_8"
path = "8/main.rs"
