[package]
name = "bustle"
version = "0.9.0"
authors = ["The Freedesktop community"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { package = "libadwaita", version = "0.6", features = ["v1_5"] }
anyhow = "1.0.69"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_14"] }
indexmap = "2.0"
once_cell = "1.19"
pcap-file = "2.0.0"
tokio = { version = "1.0", default-features = false, features = [
    "rt-multi-thread",
] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
zbus = { git = "https://github.com/dbus2/zbus.git", default-features = false, features = [
    "tokio",
] }
